visualisation/css/layout.css
/***************************************/
/*           Layout                    */
/***************************************/

body{
	display: block;
	margin: 0px;
}
/***************************************/
/*           Header                    */
/***************************************/

#header{
	height: 60px;
}
#header nav{
}
#header nav img{
	width: 50px;
	height: 50px;
}

/***************************************/
/*           Content                   */
/***************************************/
#content{
	position: relative;
	top: 60px;
	padding: 0px;
	display: block;
	z-index: 0;
}
#content.main{
	left: 40%;
	width: 60%;
}
#content.home{
	left: 0;
	width: 40%;
}

.ui-body-a .ui-link:hover {
	color: #FFFFFF !important;
	cursor: pointer;
}
.ui-focus, .ui-btn:focus {
	-moz-box-shadow: none !important;
	-webkit-box-shadow: none !important;
	box-shadow: none !important;
}

/* Small screen variation */
@media all and (max-width: 800px) {
	#content{
		left: 0 !important;
		width: 100% !important;
	}
}

/***************************************/
/*           Main menu                 */
/***************************************/
#menu.ui-panel{
	top: 60px;
}
#menu .ui-panel-inner {
    padding:0px;
}
#menu .ui-controlgroup {
    margin:0;
}

#menu.main.ui-panel {
	left: 0;
	width: 40%;
}
#menu.home.ui-panel {
	right: 0;
	width: 60%;
}
@media all and (min-width: 800px) {
	#menu.ui-panel {
		visibility: visible;
		webkit-transform: none;
		transform: none;
	}
}
#menu nav {
	margin: 0;
}
#menu nav .ui-li-thumb{
	width: 60px;
	height: 60px;
}

.ui-link-inherit{
	min-height: 10px !important;
	padding-top: 20px !important;
	padding-bottom: 20px !important;
	padding-left: 5em !important;
}
.ui-body-a{
	border: 0px !important;
}


/* Small screen variation */
@media all and (max-width: 800px) {
	#menu.ui-panel-open {
		width: 100% !important;
	}
}


/***************************************/
/*           Article                   */
/***************************************/
article{
	position: relative;
	display: block;
	width: 100%;
}



article>header>img{
	position: relative;
	width: 60px;
	height: 60px;
	vertical-align: middle;
	margin-left: 15px;
	margin-top: 0px;
}
article>header>h1{
	display: inline-block;
	margin-top: 20px;
	margin-bottom: 15px;
	margin-left: 10px;
}
article>header>div{
	position: relative;
	float: right;
	vertical-align: middle;
	margin-right: 100px;
	margin-top: 20px;
	font-weight: bold;
}
article>section.ui-collapsible,article>section.ui-collapsible-set{
	width: 90%;
	margin-left: auto;
	margin-right: auto;
}
article section div.twocols{
	-moz-column-count:2; 
	-webkit-column-count:2; 
	column-count:2;

	-moz-column-gap: 0px; 
	-webkit-column-gap: 0px; 
	column-gap: 0px;
}
article hr{
	width: 90%;
}

